# idea-note

./: .gitignore  CHANGELOG.md  GIT_COMMIT_GUIDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/scripts/: create-release.mjs  update-readme-download-links.mjs
.github/workflows/: release.yml
doc/: AI笔记助手原理.md  markdown-语法大全.md  介绍.md
doc/笔记例子/: README.md
doc/笔记例子/备忘/: README.md  周末采购备忘.md  家人朋友偏好.md  家庭常用信息.md  旅行打包清单.md  生活缴费与证件到期.md
doc/笔记例子/计划/: 2026-Q3-季度目标.md  Idea-Note-产品迭代排期.md  README.md  工作流清单.md
doc/笔记例子/记账/: 2026-07-家庭记账.md  README.md  报销与凭证.md  订阅与软件成本.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: ai_models.rs  app_data.rs  clipboard.rs  encoding.rs  files.rs  git.rs  lib.rs  main.rs  open_with.rs  print.rs  proc.rs  search.rs  terminal.rs  tree.rs
src/components/: ConfirmModal.tsx  ErrorBoundary.tsx  GitCredentialModal.tsx  HistoryModal.tsx  PromptModal.tsx  SettingsWindow.tsx  TitleBar.tsx  Toast.tsx
src/components/Editor/: CodeMirrorEditor.tsx  EditorContextMenu.tsx  EditorModeTabs.tsx  EditorTabs.tsx  FolderView.tsx  ImageView.tsx  Toolbar.tsx
src/components/Panels/: BottomPanel.tsx  Markdown.tsx  RightPanel.tsx  TerminalPanel.tsx
src/components/Sidebar/: FileTree.tsx  NotesTree.tsx  OutlinePanel.tsx  SearchPanel.tsx  Sidebar.tsx  treeDrag.tsx
src/lib/: attachments.ts  clipboard.ts  elk-stub.ts  fs.ts  git.ts  imagePath.ts  outline.ts  platform.ts  search.ts
src/lib/ai/: anthropic.ts  client.ts  commitMessage.ts  config.ts  modelCatalog.ts  modelSelection.ts  openai.ts  sse.ts  tools.ts  types.ts
src/lib/codemirror/: activeFormats.ts  activeView.ts  autoClose.ts  diagram.ts  editor.css  htmlPreview.ts  inlineHtml.ts  keybindings.ts  linkClick.ts  livePreview.ts  markdownCommands.ts  math.ts  paragraphEnter.ts  paragraphWrap.ts  searchPanel.ts  tablePreview.ts  theme.ts
src/lib/print/: pdfExportTest.ts  printNote.ts  renderMarkdown.ts
src/store/: useAppStore.ts  useChatStore.ts
src/styles/: globals.css  print.css
src/themes/: builtins.json  index.ts
